<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="detalies01">Вітер</string>
    <string name="detalies2">Опади</string>
    <string name="detalies3">Тиск</string>
    <string name="detalies4">Волога</string>
    <string name="weather_5_days">Прогноз на 5 днів ></string>
    <string name="weather_5_days2">Прогноз на 5 днів</string>
    <string name="weather_today">Прогноз на добу</string>
    <string name="cities">Міста</string>
    <string name="add_city_label">Введіть назву міста</string>
    <string name="add_city">Додати місто</string>
    <string name="lviv">Самбір</string>
    <string name="no_cities">Недодано жодного міста</string>
    <string name="no_internet">Нема підключення до мережі</string>
    <string name="error">Помилка</string>
    <string name="update">Спробувати ще раз</string>
    <string name="info_label">Інформація</string>
    <string name="info_text">WeatherApp 1.0\nПрограма, для надання поточних погодних даних, та прогнозу на кілька днів для різних міст. Демостраційний додаток. В стані розробки, не стабільний.\nSviat Kuzbyt липень 2022</string>
    <string name="url1"><a href="https://openweathermap.org/">OpenWeather - дані про погоду</a></string>
    <string name="url2"><a href="https://www.flaticon.com/">Іконки (частина) - flaticon.com</a>  </string>
    <string name="url3"><a href="https://github.com/SviatKuzbyt/WeatherApp">GitHub проєкта</a> </string>
    <string name="url4"><a href="https://www.instagram.com/kuzbyt.sviat/">Instagram розробника</a> </string>
</resources>