<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".cities.AddCityFragment">


    <TextView
        android:id="@+id/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/add_city_label"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addLabel"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:ems="10"
        android:fontFamily="@font/inter_light"
        android:hint="@string/lviv"
        android:inputType="textCapSentences"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBtnCity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextCity"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_add"
        android:fontFamily="@font/inter"
        android:text="@string/add_city"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</RelativeLayout>